# Isaac_QMM

./: .gitignore  README.md  ROBOT_MOVEMENT_CHECK.md  check_joint_state.py  frames_2025-11-04_18.56.29.gv  frames_2025-11-04_18.58.59.gv  frames_2025-11-04_19.05.22.gv  frames_2025-11-09_16.29.23.gv  frames_2025-11-09_16.30.50.gv  frames_2025-11-09_16.31.25.gv  frames_2025-11-09_16.35.45.gv  frames_2025-11-09_16.35.58.gv  frames_2025-11-09_16.39.30.gv  run_demo.sh  run_quadmani_controller.sh
src/: isaac_sim_bridge  quadmani_controller
src/isaac_sim_bridge/: ISAAC_SIM_SETUP_CHECK.md  README.md  SETUP_GUIDE.md  check_joint_command.py  package.xml  setup.py  test_home_position.sh  test_joint_control.py
src/isaac_sim_bridge/assets/: QMM_final.usd
src/isaac_sim_bridge/assets/k1/: k1.usd
src/isaac_sim_bridge/assets/k1/configuration/: k1_base.usd  k1_physics.usd  k1_sensor.usd
src/isaac_sim_bridge/isaac_sim_bridge/: check_home_position.py  fk_ik_comparison.py  fk_ik_controller.py  hip_position_calculator.py  hip_position_comparison.py  home_pose_publisher.py  home_position_controller.py  isaac_hip_position_publisher.py  isaac_joint_command_subscriber.py  isaac_joint_state_publisher.py  isaac_sim_script.py  joint_command_publisher.py  joint_command_publisher_demo.py  joint_state_subscriber.py  joint_state_subscriber_demo.py  quadruped_ik_controller.py  tf_pose_listener.py
src/isaac_sim_bridge/launch/: fk_ik_controller.launch.py  hip_position_comparison.launch.py  hip_position_test.launch.py  home_pose_publisher.launch.py  isaac_bridge_demo.launch.py  joint_state_subscriber.launch.py
src/qmm_control/: CMakeLists.txt  README.md  build_test_irm.sh  package.xml  run_fk_ik.sh  run_home_position.sh  run_irm_controller.sh
src/qmm_control/include/qmm_control/: InverseReachabilityMap.h
src/qmm_control/scripts/: irm_controller.py  visual_IRM.py
src/qmm_control/src/: GetOptPose_qmm.cpp  InverseReachabilityMap.cpp  test_irm.cpp  test_k1_ik.cpp  tf_test.cpp
src/qmm_control/urdf/: k1.urdf
src/quadmani_controller/: README.md  package.xml  plugin.xml  setup.py
src/quadmani_controller/quadmani_controller/: __init__.py  quadmani_controller.py
