<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qmm_control</name>
  <version>0.0.0</version>
  <description>QuadMani Motion Control Package - FK/IK Controllers</description>
  <maintainer email="taegyeom@example.com">taegyeom</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>ament_index_python</depend>
  <depend>kdl_parser</depend>
  <depend>python3-pykdl</depend>
  <depend>urdf_parser_py</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
